Index- creacion imagen inicial

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 
 </head>
 <body>
+  <section class="container">
+    <img src="./assets/images/image-omelette.jpeg" alt="Imagen receta">
+    <header class="content">
+      <h1>Simple Omelette Recipe</h1>
+      <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </header>
+  </section>
 
-  Simple Omelette Recipe
+  
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+  
 
   Preparation time
 
@@ -70,7 +76,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Washington Nieto </a>.
   </div>
 </body>
 </html>
